<resources>
    <string name="app_name">YunMusic</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>




    <string name="navigation_message">我的消息</string>
    <string name="navigation_members">会员中心</string>
    <string name="navigation_mall">商城</string>
    <string name="navigation_online_music">在线听歌免流量</string>
    <string name="navigation_friends">我的好友</string>
    <string name="navigation_man_near">附近的人</string>
    <string name="navigation_skin">个性换肤</string>
    <string name="navigation_SoundHound">听歌识曲</string>
    <string name="navigation_time_playing">定时停止播放</string>
    <string name="navigation_alarm_clock">音乐闹钟</string>
    <string name="navigation_Driving_mode">驾驶模式</string>
    <string name="navigation_cloud_disk">音乐云盘</string>


    <string name="navigation_bottom_night_mode">夜间模式</string>
    <string name="navigation_bottom_setting">夜间模式</string>
    <string name="navigation_bottom_exit">退出</string>
</resources>
