<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
    <View style="@style/separator_line" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <music.liuhao.com.yunmusic.view.custom.CustomButtonView
            android:id="@+id/night_mode"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            Src="@drawable/ic_menu_gallery"
            Text="@string/navigation_bottom_night_mode"
            />
        <music.liuhao.com.yunmusic.view.custom.CustomButtonView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            Src="@drawable/ic_menu_gallery"
            Text="@string/navigation_bottom_setting"
            />
        <music.liuhao.com.yunmusic.view.custom.CustomButtonView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            Src="@drawable/ic_menu_gallery"
            Text="@string/navigation_bottom_exit"
            />
    </LinearLayout>
</LinearLayout>